--- a/login.html
+++ b/login.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <tittle> Login Page </tittle>
+        <title> Login Page </title>
     </head>
 
     <body>
-        <h1>Login Page</h1>
+        <h1>Welcome to *wonderful website name*</h1>
+        <h2><em>Login</em></h2>
+        <h3>Name: </h3>
     </body>
 
 </html>
