--- a/main.html
+++ b/main.html
@@ -10,6 +10,6 @@
             <p>Welcome to Know Better, a site for students to study more effectively! <br>
                 With our chatbot "Larry" (lol) you can find videos for the topics you are studying.</p>
         </h2>
-        <h3>Try it out</h3>
+        <h3>Try it out <a> href="chat.html"</a></h3>
     </body>
 </html>
