--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <h2><em><center>Login</center></em></h2>
         <h3><center>Name: </center></h3>
         <ul>
-            <li>Main page <a href="main.html"> </li>
+            <li><a href="main.html"> Main page </a></li>
         </ul>
     </body>
 </html>
