--- a/main.html
+++ b/main.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Main Page</title>
+        <style>
+            body {
+                text-align: center;
+            }
+        </style>
     </head>
 
     <body>
