--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
         <h1><center>Welcome to Know Better</center></h1>
         <h2><em><center>Login</center></em></h2>
         <h3><center>Name: </center></h3>
+        <h4>Sign up</h4>
         <ul>
             <li><a href="main.html"> Main page </a></li>
         </ul>
