--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
             }
             ul lia a{
                 display: block;
-                color: blue;
-                padding: 14px 16px;
+                background-color: blue;
+                padding: 10px 16px 15px 16px;
             }
             ul li a: hover:not(.active); {
                 background-color: #FF00FF;
@@ -30,7 +30,7 @@
         
         <nav>
             <ul>
-            <li> <a href="login.html"> Log out</a></li>
+            <li style="float:right"> <a href="login.html"> Log out</a></li>
             </ul>
         </nav>
         <h2>
