--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
         
         <nav>
             <ul>
-            <li style="float:right"> <a href="login.html"> Log out</a></li>
+            <li style="float:left"> <a href="login.html"> Log out</a></li>
             </ul>
         </nav>
         <h2>
