--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
                 
             }
             ul {
+                list-style-type: none;
                 position: fixed;
                 top: 0;
                 width: 100%;  
@@ -17,7 +18,7 @@
             ul lia a{
                 display: block;
                 background-color: blue;
-                padding: 10px 16px 15px 16px;
+                padding: 10px 16px 25px 16px;
             }
             ul li a: hover:not(.active); {
                 background-color: #FF00FF;
