--- a/main.html
+++ b/main.html
@@ -1,43 +1,66 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Main Page</title>
-        <style>
-            body {
-                text-align: center;
-            }
-            nav{
-                
-            }
-            ul {
-                list-style-type: none;
-                position: fixed;
-                top: 0;
-                width: 100%;  
-            }
-            ul lia a{
-                display: block;
-                background-color: blue;
-                padding: 10px 16px 35px 16px;
-            }
-            ul li a: hover:not(.active); {
-                background-color: #FF00FF;
-            }
-        </style>
-    </head>
+<head>
+    <title>Main Page</title>
+    <style>
+        body {
+            text-align: center;
+            margin: 0;
+            padding-top: 60px; /* Prevent content from hiding behind nav */
+            font-family: Arial, sans-serif;
+        }
 
-    <body>
-        <h1>Know Better</h1>
-        
-        <nav>
-            <ul>
-            <li style="float:left"> <a href="login.html"> Log out</a></li>
-            </ul>
-        </nav>
-        <h2>
-            <p>Welcome to Know Better, a site for students to study more effectively! <br>
-                With our chatbot "Larry" (lol) you can find videos for the topics you are studying.</p>
-        </h2>
-        <h3> <a href="chat.html"> Try it out</a></h3>
-    </body>
+        nav {
+            width: 100%;
+            position:fixed;
+            top: 0;
+            background-color: rgb(76, 117, 211);
+            padding: 10px 0;
+        }
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        ul li {
+            float: left;
+        }
+
+        ul li a {
+            display: block;
+            color: white;
+            padding: 12px 18px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        ul li a:hover:not(.active) {
+            background-color: #FF00FF;
+        }
+
+        h1 {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Know Better</h1>
+
+    <nav>
+        <ul>
+            <li><a href="login.html">Log out</a></li>
+        </ul>
+    </nav>
+
+    <h2>
+        <p><img src="LOGO.jpg"></p><br>
+        With our chatbot “Larry” (lol), you can find videos for the topics you are studying.</p>
+    </h2>
+
+    <h3><a href="chat.html">Try it out</a></h3>
+
+</body>
 </html>
