Fix logo image filename in main.html

--- a/main.html
+++ b/main.html
@@ -54,7 +54,7 @@
     </nav>
 
     <h2>
-        <p><img src="LOGO.jpg"></p><br>
+        <p><img src="logo.jpg"></p><br>
         With our chatbot “Larry” (lol), you can find videos for the topics you are studying.</p>
     </h2>
 
