--- a/youtube.html
+++ b/youtube.html
@@ -5,6 +5,12 @@
 </head>
 
 <body>
+  <nav>
+    <ul>
+      <li><a href = "main.html"></a> Homepage</li>
+      <li><a href = "chat.html"></a>Chat</li>
+    </ul>
+  </nav>
   <h1>Welcome to the Study Library!</h1>
   <h2>
     <p>This video library is where you can search for relevant videos to help you study</p>
