--- a/youtube.html
+++ b/youtube.html
@@ -3,6 +3,12 @@
 <head>
   <title>This is the youtube page</title>
   <style>
+    body {
+            text-align: center;
+            margin: 0;
+            padding-top: 60px; /* Prevent content from hiding behind nav */
+            font-family: Arial, sans-serif;
+        }
     nav {
             width: 100%;
             position:fixed;
