Fix logo alt text and add newline at end of file

--- a/login.html
+++ b/login.html
@@ -135,7 +135,7 @@
         <div class="login-haze-bg">
         <div class="outer-container">
     <div class="logo-container">
-      <img src="logo.jpg" alt="Logo" class="logo-img">
+      <img src="logo.jpg" alt="logo" class="logo-img">
     </div>
   </div>
         <h1 style="font-family: serif; color: rgba(255, 136, 0, 0.975);"><center>Login</center></h1>
