added videos to youtube.html

--- a/youtube.html
+++ b/youtube.html
@@ -55,6 +55,19 @@
     <p>This video library is where you can search for relevant videos to help you study</p>
   </h2>
   
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/RA2-Vc4PIOY?si=4DbBLHb1KmD-8tvx" title="YouTube video player" 
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/7Q2HwTHcxA0?si=clFEC7NA-DoHcAb2" title="YouTube video player" 
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/-oVavgmveyY?si=hEjV9wCuYYUGH-wl" title="YouTube video player" 
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/qrBkQ8Ci2fM?si=-jvOIB8Om2ZKE5Eq" title="YouTube video player" 
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  
   <h3>Search topics</h3>
 </body>
   
