--- a/youtube.html
+++ b/youtube.html
@@ -52,7 +52,7 @@
   
   <h1>Welcome to the Study Library!</h1>
   <h2>
-    <p>This video library is where you can search for relevant videos to help you study</p>
+    <p>This video library is where you can find for relevant videos to help you study.</p>
   </h2>
   
   <iframe width="560" height="315" src="https://www.youtube.com/embed/RA2-Vc4PIOY?si=4DbBLHb1KmD-8tvx" title="YouTube video player" 
@@ -91,7 +91,7 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/YNstP0ESndU?si=7lUgHg4NHpqRvVuO" title="YouTube video player" 
     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  <h3>Search topics</h3>
+  
 </body>
   
 </html>
